Fix Styling on Mobile

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -237,6 +237,7 @@ footer p {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-flow: wrap;
 }
 
 .member-meta span {
